[Add] linked all the files

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -20,13 +20,13 @@
                 <a href="{{ url_for('index') }}" class="navbar-item">
                   Home
                 </a>
-                <a href="" class="navbar-item">
+                <a href="{{ url_for('profile') }}" class="navbar-item">
                   Profile
                 </a>
-                <a href="" class="navbar-item">
+                <a href="{{ url_for('auth.login') }}" class="navbar-item">
                   Login
                 </a>
-                <a href="" class="navbar-item">
+                <a href="{{ url_for('auth.register') }}" class="navbar-item">
                   Sign Up
                 </a>
                 <a href="" class="navbar-item">
