--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -7,7 +7,7 @@
       {{ messages[0] }}
     </div>
     {% endif %} {% endwith %}
-    <form method="POST" action="/login">
+    <form method="POST" action="/auth/login">
       <div class="field">
         <div class="control">
           <input
