--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -8,7 +8,7 @@
       <a href="{{ url_for('login') }}">login page</a>.
     </div>
     {% endif %} {% endwith %}
-    <form method="POST" action="/signup">
+    <form method="POST" action="/auth/register">
       <div class="field">
         <div class="control">
           <input
@@ -26,7 +26,7 @@
           <input
             class="input is-large"
             type="text"
-            name="name"
+            name="username"
             placeholder="Name"
             autofocus=""
           />
