[Add] book info
it is needed to show rental page in profile
and comments functions in book_info

--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -26,7 +26,7 @@
           <input
             class="input is-large"
             type="text"
-            name="username"
+            name="name"
             placeholder="Name"
             autofocus=""
           />
