--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -1,5 +1,7 @@
-{% extends "layout.html" %} {% block content %}
+{% extends "layout.html" %}
+{% block content %}
 <h1 class="title">
   Welcome to elice
 </h1>
 {% endblock %}
+
