--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -35,6 +35,12 @@
         Login
       </button>
     </form>
+    <div style="margin: 7px"></div>
+    <form action="/auth/register" method="GET">
+      <button class="button is-block is-info is-large is-fullwidth">
+        Sign Up
+      </button>
+    </form>
   </div>
 </div>
 {% endblock %}
