--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -26,7 +26,7 @@
           <input
             class="input is-large"
             type="text"
-            name="name"
+            name="username"
             placeholder="Name"
             autofocus=""
           />
