--- a/app/templates/book_info.html
+++ b/app/templates/book_info.html
@@ -43,7 +43,7 @@
 		나중에 채울건데 뭐넣을거냐면 user, book, 댓글의 혼종 테이블에서 데이터를 가져와서 뿌려
 		<form action="/{{ book.id }}" method="POST">
 			<input type="text">
-			<input type="button" value="댓글 달기" >
+			<input type="button" name="comment" value="댓글 달기" >
 		</form>
 	</div>
 </div>
