--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,9 +13,9 @@
   </a>
     <div>평점 : {{ book.rating }}</div>
     <div>대출 가능한 도서 : {{ book.stock }}</div>
-    <form action="" method="GET">
-      <label for="name_txt">text: </label>
-      <input type="button" value="대여하기" onclick="alert('대출 완료!')">
+    <form action="/checkout" method="POST">
+      <label for="대여하기"></label>
+      <button name="id" value="{{ book.id }}">대여하기</button>
     </form>
     <hr>
     <div style="margin: 20px"></div>
