--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -11,6 +11,13 @@
   </head>
 
   <body>
+      {% with messages = get_flashed_messages() %}
+      {% if messages %}
+          <script>
+              alert("{{messages[-1]}}")
+          </script>
+      {% endif %}
+      {% endwith %}
     <section class="hero is-primary is-fullheight">
       <div class="hero-head">
         <nav class="navbar">
