--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -36,7 +36,7 @@
                 <a href="{{ url_for('auth.register') }}" class="navbar-item">
                   Sign Up
                 </a>
-                <a href="" class="navbar-item">
+                <a href="{{ url_for('auth.logout') }}" class="navbar-item">
                   Logout
                 </a>
               </div>
