--- a/app/templates/book_info.html
+++ b/app/templates/book_info.html
@@ -39,10 +39,10 @@
 			{{ book.description }}
 		</article>
 	</div>
-	<div class="comment">
-		나중에 채울건데 뭐넣을거냐면 user, book, 댓글의 혼종 테이블에서 데이터를 가져와서 뿌려
+	<div class="comments">
 		<form action="/{{ book.id }}" method="POST">
-			<input type="text">
+			<input type="text" name="title">
+			<input type="text" name="body">
 			<input type="button" name="comment" value="댓글 달기" >
 		</form>
 	</div>
