--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,10 +1,15 @@
 {% extends "layout.html" %} {% block content %}
 <h1 class="title">
-  Flask Login Example
+  Elice Library
 </h1>
 <h2 class="subtitle">
   Welcome to Fake Library
 </h2>
+{% with messages = get_flashed_messages() %} {% if messages %}
+<div class="notification is-danger">
+  <span id="error-message">{{ messages[0] }}</span>
+</div>
+{% endif %} {% endwith %}
 <div>
   {% for book in books %}
   <a href="{{ url_for('book_info.book_info', id=book.id) }}">
