--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Elice | Flask Auth Example</title>
+    <title>Elice | Library</title>
+    <!-- css load -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css"
     />
-<!-- css load -->
-    <link rel="stylesheet" type="text/css" href="../static/style.css" />
   </head>
 
   <body>
@@ -26,15 +26,18 @@
                 <a href="{{ url_for('profile') }}" class="navbar-item">
                   Profile
                 </a>
+                {% if g.user %}
+                <a href="{{ url_for('auth.logout') }}" class="navbar-item">
+                  Logout
+                </a>
+                {% else %}
                 <a href="{{ url_for('auth.login') }}" class="navbar-item">
                   Login
                 </a>
                 <a href="{{ url_for('auth.register') }}" class="navbar-item">
                   Sign Up
                 </a>
-                <a href="{{ url_for('auth.logout') }}" class="navbar-item">
-                  Logout
-                </a>
+                {% endif %}
               </div>
             </div>
           </div>
