--- a/app/templates/book_info.html
+++ b/app/templates/book_info.html
@@ -41,14 +41,18 @@
 	</div>
 	<div class="comments">
 		<div class="output_data">
-			{{ post.author_id }}
 		</div>
 		<div class="input_data">
 			<form action="/{{ book.id }}" method="POST">
+				<ul class="rate-area">
+					<input type="radio" id="5-star" name="rating" value="5" /><label for="5-star" title="Amazing">5 stars</label>
+					<input type="radio" id="4-star" name="rating" value="4" /><label for="4-star" title="Good">4 stars</label>
+					<input type="radio" id="3-star" name="rating" value="3" /><label for="3-star" title="Average">3 stars</label>
+					<input type="radio" id="2-star" name="rating" value="2" /><label for="2-star" title="Not Good">2 stars</label>
+					<input type="radio" id="1-star" name="rating" value="1" /><label for="1-star" title="Bad">1 star</label>
+				</ul>
 				<div>
 					제목 : <input type="text" name="title">
-				</div>
-				<div>
 					내용 : <input type="text" name="body">
 				</div>
 				<input type="button" name="comment" value="댓글 달기" >
