--- a/app/templates/book_info.html
+++ b/app/templates/book_info.html
@@ -41,17 +41,38 @@
 	</div>
 	<div class="comments">
 		<div class="output_data">
-			{{ post.author_id }}
+			{% for comment in comments %}
+			<div>
+				이름 : {{ comment.username }} 별 : {{ comment.star }}
+			</div>
+			<div>
+				{{ comment.body }}
+			</div>
+			<div>
+				<form action="/book_info/update" method="POST">
+					<button name="edit" value={{ book.id }}>수정</button>
+				</form>
+				<form action="/book_info/delete" method="POST">
+					<button name="delete" value={{ book.id }}>삭제</button>
+				</form>
+			</div>
+			{% endfor %}
 		</div>
 		<div class="input_data">
-			<form action="/{{ book.id }}" method="POST">
-				<div>
-					제목 : <input type="text" name="title">
+			<form action="/book_info/create" method="POST">
+				<div class="star">
+					<ul class="rate-area">
+						<input type="radio" id="5-star" name="rating" value="5" /><label for="5-star" title="Amazing">5 stars</label>
+						<input type="radio" id="4-star" name="rating" value="4" /><label for="4-star" title="Good">4 stars</label>
+						<input type="radio" id="3-star" name="rating" value="3" /><label for="3-star" title="Average">3 stars</label>
+						<input type="radio" id="2-star" name="rating" value="2" /><label for="2-star" title="Not Good">2 stars</label>
+						<input type="radio" id="1-star" name="rating" value="1" /><label for="1-star" title="Bad">1 star</label>
+					</ul>
 				</div>
 				<div>
-					내용 : <input type="text" name="body">
+					<textarea type="text" name="body"> </textarea>
 				</div>
-				<input type="button" name="comment" value="댓글 달기" >
+				<button type="submit" name="id" value="{{ book.id }}" >댓글 달기</button>
 			</form>
 		</div>
 	</div>
