--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,44 +1,33 @@
 {% extends "layout.html" %} {% block content %}
-<div class="column is-4 is-offset-4">
-  <h3 class="title">Login</h3>
-  <div class="box">
+<div class="login">
+  <h3 class="login__title">Login</h3>
+  <div class="login__container">
     {% with messages = get_flashed_messages() %} {% if messages %}
     <div class="notification is-danger">
       <span id="error-message">{{ messages[0] }}</span>
     </div>
     {% endif %} {% endwith %}
-    
-    <form method="POST" action="/auth/login">
-      <div class="field">
-        <div class="control">
+    <form class="login__inputs" method="POST" action="/auth/login">
           <input
-            class="input is-large"
+            class="login__input"
             type="email"
             name="email"
             placeholder="Your Email"
             autofocus=""
           />
-        </div>
-      </div>
-
-      <div class="field">
-        <div class="control">
           <input
-            class="input is-large"
+            class="login__input"
             type="password"
             name="password"
             minlength="8"
             placeholder="Your Password"
           />
-        </div>
-      </div>
-      <button class="button is-block is-info is-large is-fullwidth">
+      <button class="button login__button is-block is-info is-fullwidth">
         Login
       </button>
     </form>
-    <div style="margin: 7px"></div>
     <form action="/auth/register" method="GET">
-      <button class="button is-block is-info is-large is-fullwidth">
+      <button class="button signup__button is-block is-info is-fullwidth">
         Sign Up
       </button>
     </form>
