--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %} {% block content %}
-<div class="column is-4 is-offset-4">
+<div class="signup">
   <h3 class="title">Sign Up</h3>
   <div class="box">
     {% with messages = get_flashed_messages() %} {% if messages %}
@@ -8,54 +8,37 @@
       <a href="{{ url_for('auth.login') }}">login page</a>.
     </div>
     {% endif %} {% endwith %}
-    <form method="POST" action="/auth/register">
-      <div class="field">
-        <div class="control">
+    <form class="signup__container" method="POST" action="/auth/register">
           <input
-            class="input is-large"
+            class="signup__input"
             type="email"
             name="email"
             placeholder="Email"
             autofocus=""
           /> 
-          <!-- 빨간박스 어디서추가되나요? -->
-        </div>
-      </div>
 
-      <div class="field">
-        <div class="control">
           <input
-            class="input is-large"
+            class="signup__input"
             type="text"
             name="username"
             placeholder="Name"
             autofocus=""
           />
-        </div>
-      </div>
 
-      <div class="field">
-        <div class="control">
           <input
-            class="input is-large"
+            class="signup__input"
             type="password"
             name="password"
             minlength="8"
             placeholder="Password"
           />
-        </div>
-      </div>
-      <div class="field">
-        <div class="control">
           <input
-            class="input is-large"
+            class="signup__input"
             type="password"
             name="password-check"
             placeholder="Password"
           />
-        </div>
-      </div>
-      <button class="button is-block is-info is-large is-fullwidth">
+      <button class="button is-block is-info is-fullwidth">
         Sign Up
       </button>
     </form>
