--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -8,7 +8,7 @@
       {% if book.end_date is none %}
       <div class="rental__item">
       <a href="{{ url_for('book_info.book_info', id=book.id) }}">
-        <img src="{{ book.image_path }}" alt="{{ book.name }}" width=100px>
+        <img class="rental__img" src="{{ book.image_path }}" alt="{{ book.name }}" width=100px>
         <h4>{{ book.name }}</h4>
       </a>
         <div>대여일 : {{ book.start_date }}</div>
