--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -12,7 +12,7 @@
       <nav class="navbar">
         <div class="navbar__title">
           <h2 class="navbar__main-title">
-            Elice Library
+            <a href="{{ url_for('index') }}">Elice Library</a>
           </h2>
           <h3 class="navbar__subtitle">
             Welcome to Fake Library
